--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,20 @@ body {
 }
 
 .input-city::placeholder {
-  color: rgb(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.input-city:focus {
+  outline: none;
+  box-shadow: 0 2.4rem 2.4rem rgba(0, 0, 0, 0.1);
+  transform: translateY(-2px);
 }
 
 .btn-search {
   position: absolute;
   background: none;
   right: 16px;
-  top: 63%;
+  top: 55%;
   transform: translateY(-50%);
   border: none;
   display: flex;
