--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+:root {
+  --color-brand--1: #ffb545;
+  --color-brand--2: #00c46a;
+
+  --color-dark--0: #242a2e;
+  --color-dark--1: #2d3439;
+  --color-dark--2: #42484d;
+  --color-light--1: #aaa;
+  --color-light--2: #ececec;
+  --color-light--3: #d6dee0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +30,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.dark-mode {
+  filter: invert(100%);
+  transition: all 0.5s;
+}
+
+.btn-dark-mode {
+  position: fixed;
+  top: 10px;
+  right: 16px;
+  padding: 10px;
+  font-size: 30px;
+  background-color: #ffe8cc;
+  border: none;
+  border-radius: 100px;
+  cursor: pointer;
 }
 
 .regular-txt {
